= 4.8.6 - TBD =
Fixed: Check custom tables for columns ( [#1288](https://github.com/WPChill/download-monitor/issues/1288) )
Added: Upsells in reports page ( [#1290](https://github.com/WPChill/download-monitor/issues/1290) )
Fixed: Total downloads shortcode ( [#1292](https://github.com/WPChill/download-monitor/issues/1292) )

= 4.8.5 - 09.06.2023 =
Fixed: External logging download failure ( [#1283](https://github.com/WPChill/download-monitor/issues/1283) )
Fixed: LiteSpeed server functionality fo X-Accel-Redirect / X-Sendfile option ( [#1282](https://github.com/WPChill/download-monitor/issues/1282) )

= 4.8.4 - 07.06.2023 =
Fixed: Security issue regarding file uploading ( [#1276](https://github.com/WPChill/download-monitor/issues/1276) )
Fixed: Cascading downloads ( [#1275](https://github.com/WPChill/download-monitor/issues/1275) )
Fixed: Duplicate downloads when multiple post meta entries for same download ( [#1279](https://github.com/WPChill/download-monitor/issues/1279) )

= 4.8.3 - 31.05.2023 =
Fixed: External file checking

= 4.8.2 - 30.05.2023 =
Fixed: Vulnerability fix

= 4.8.1 - 24.05.2023 =
Fixed: Error when activating, missing function.

= 4.8.0 - 24.05.2023 =
Added: Clear optimization plugins cache and minified scripts cache on plugin update/activation ( [#1224](https://github.com/WPChill/download-monitor/issues/1224) )
Changed: No access modal now takes the no access page content ( [#1234](https://github.com/WPChill/download-monitor/issues/1234) )
Fixed: Reports not working when permalinks set on plain ( [#1243](https://github.com/WPChill/download-monitor/issues/1243) )
Fixed: Insert Download - Quick-add download in classic editor now removed if current user can't manage downloads ( [#1164](https://github.com/WPChill/download-monitor/issues/1164) )
Changed: Data type for download_category column in _download_log table to longtext ( [#1254](https://github.com/WPChill/download-monitor/issues/1254) )