@@ -2,6 +2,7 @@
 Fixed: Check custom tables for columns ( [#1288](https://github.com/WPChill/download-monitor/issues/1288) )
 Added: Upsells in reports page ( [#1290](https://github.com/WPChill/download-monitor/issues/1290) )
 Fixed: Total downloads shortcode ( [#1292](https://github.com/WPChill/download-monitor/issues/1292) )
+Fixed: Recreate upgrade environment hides downloads ( [#1278](https://github.com/WPChill/download-monitor/issues/1278) )
 
 = 4.8.5 - 09.06.2023 =
 Fixed: External logging download failure ( [#1283](https://github.com/WPChill/download-monitor/issues/1283) )
